tests/custom/STARIS_2022/operation-type-errors/party-type-error-02/stderr.expected
Error:
    Parser error in file: party-type-error.essence Error is:
ValidatorError party-type-error.essence:2:24:
  |
2 | such that b = party(5, 6) 
  |                        ^
Type error:
	Expected: partition from int
	Got: int

